--- a/index.html
+++ b/index.html
@@ -75,19 +75,19 @@
       <div class="cps"><img src="img/icps-logo.jpg"></div>
        <div>
         <div class="icon row">
-          <div class="img-hover col-sm-4 col-md-4 col-lg-4 col-xl-4">
+          <div class="img-hover col-sm-12 col-md-12 col-lg-12 col-xl-4">
             <button>
               <img class="img-responsive img-rounded" src="img/register.gif">
               <div class="admin">Register Your Interest</div>
             </button>
           </div>
-          <div class="img-hover col-sm-4 col-md-4 col-lg-4 col-xl-4">
+          <div class="img-hover col-xl-4">
             <button>
               <img class="img-responsive img-rounded" src="img/cmi-wide-accredited.png">
               <p>Approved centre</p>
             </button>
           </div>
-          <div class="img-hover col-sm-4 col-md-4 col-lg-4 col-xl-4">
+          <div class="img-hover col-xl-4">
             <button>
               <p>Accredited By:</p>
               <img class="img-responsive img-rounded" src="img/asic-wide-accredited.png">
@@ -101,81 +101,92 @@
 </div>
 <div class="container text">
   <div class="row">
-    <h1>Course Overview</h1>
-    <p>
-      Strong, well-structured and highly active parliamentary committees significantly enhance the accountability and democratic workings of any government. This course will provide those engaged in parliamentary and policy affairs with a clear and comprehensive understanding of best practice in the formation and management of parliamentary committees.
-    </p>
-    <p>
-      Interactive learning will support participants’ understanding of key issues in parliamentary committees, such as organising inquiries, the scope of activity and working with the media. Participants will leave equipped to increase the impact of committees and better understand different roles and responsibilities, whilst improving the transparency and outreach of government.
-    </p>
-    <p>
-      A comprehensive analysis of the mechanisms behind parliamentary committees will be provided, with subjects to be discussed including:
-    </p>
-    <ol>
-      <li>
-        The organisation of parliamentary committees
-      </li>
-      <li>
-        Setting up and conducting an inquiry
-      </li>
-      <li>
-        Legislative committees
-      </li>
-      <li>
-        Power and responsibilities of the chairman
-      </li>
-      <li>
-        Working with the media
-      </li>
-      <li>
-        Measuring the impact of parliamentary committees
-      </li>
-      <li>
-        Criticisms of parliamentary committees
-      </li>
-    </ol>
-    <p>
-      Upon completion of this week-long course and subsequent successful completion of CMI written tasks, the successful candidate will be awarded a Level 5 CMI certificate in Management &amp; Leadership showing the CMI units achieved. The CMI is the only chartered professional body in the UK dedicated to promoting the highest standards in management and leadership excellence. The professional qualifications offered by the Institute are internationally recognised and sought after.
-    </p>
-    <h1>Learning Outcomes</h1>
-    <p>
-      By the end of this course delegates will be able to:
-    </p>
-    <br>
-    <ol>
-      <li>
-        Identify the objectives and scope of parliamentary committees
-      </li>
-      <li>
-        Lead effective organisational change
-      </li>
-      <li>
-        Improve capacity and support structures whilst reducing administrative burdens
-      </li>
-      <li>
-        Analyse, enhance and evaluate Parliamentary performance
-      </li>
-      <li>
-        Establish parliamentary committees that better meet citizen needs
-      </li>
-    </ol>
-    <ol>
-      <li>
-        The opportunity to gain a recognised professional qualification
-      </li>
-      <li>
-        Hear the latest insights, research and developments in parliamentary committees from leading experts
-      </li>
-      <li>
-        Network and share ideas with colleagues from around the world
-      </li>
-      <li>
-        Enhance your skills and knowledge in the management of parliamentary committees
-      </li>
-    </ol>
-    <p>
-      This course will provide those involved in planning for climate change adaptation with a clear understanding of the threats posed by a changing environment as well as the dynamics and challenges of implementing climate change adaptation strategies.
-    </p>
+    <div>
+      <h1>Course Overview</h1>
+      <p>
+        Strong, well-structured and highly active parliamentary committees significantly enhance the accountability and democratic workings of any government. This course will provide those engaged in parliamentary and policy affairs with a clear and comprehensive understanding of best practice in the formation and management of parliamentary committees.
+      </p>
+      <p>
+        Interactive learning will support participants’ understanding of key issues in parliamentary committees, such as organising inquiries, the scope of activity and working with the media. Participants will leave equipped to increase the impact of committees and better understand different roles and responsibilities, whilst improving the transparency and outreach of government.
+      </p>
+      <p>
+        A comprehensive analysis of the mechanisms behind parliamentary committees will be provided, with subjects to be discussed including:
+      </p>
+      <ol>
+        <li>
+          The organisation of parliamentary committees
+        </li>
+        <li>
+          Setting up and conducting an inquiry
+        </li>
+        <li>
+          Legislative committees
+        </li>
+        <li>
+          Power and responsibilities of the chairman
+        </li>
+        <li>
+          Working with the media
+        </li>
+        <li>
+          Measuring the impact of parliamentary committees
+        </li>
+        <li>
+          Criticisms of parliamentary committees
+        </li>
+      </ol>
+      <p>
+        Upon completion of this week-long course and subsequent successful completion of CMI written tasks, the successful candidate will be awarded a Level 5 CMI certificate in Management &amp; Leadership showing the CMI units achieved. The CMI is the only chartered professional body in the UK dedicated to promoting the highest standards in management and leadership excellence. The professional qualifications offered by the Institute are internationally recognised and sought after.
+      </p>
+    </div>
+    <div>
+      <h1>
+        Learning Outcomes
+      </h1>
+      <p>
+        By the end of this course delegates will be able to:
+      </p>
+      <ol>
+        <li>
+          Identify the objectives and scope of parliamentary committees
+        </li>
+        <li>
+          Lead effective organisational change
+        </li>
+        <li>
+          Improve capacity and support structures whilst reducing administrative burdens
+        </li>
+        <li>
+          Analyse, enhance and evaluate Parliamentary performance
+        </li>
+        <li>
+          Establish parliamentary committees that better meet citizen needs
+        </li>
+      </ol>
+    </div>
+    <div>
+      <h1>
+        How You Will Benefit
+      </h1>
+      <ol>
+        <li>
+          The opportunity to gain a recognised professional qualification
+        </li>
+        <li>
+          Hear the latest insights, research and developments in parliamentary committees from leading experts
+        </li>
+        <li>
+          Network and share ideas with colleagues from around the world
+        </li>
+        <li>
+          Enhance your skills and knowledge in the management of parliamentary committees
+        </li>
+      </ol>
+      <p>
+        This course will provide those involved in planning for climate change adaptation with a clear understanding of the threats posed by a changing environment as well as the dynamics and challenges of implementing climate change adaptation strategies.
+      </p>
+    </div>
+
   </div>
 </div>
 <!-- Footer -->
