--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
 <body>
 <div class="container-fluid" id="total">
   <div class="row menu">
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="#"></a>
+    <nav class="navbar navbar-expand-lg navbar-light container">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -73,29 +72,30 @@
   <div class="bg row">
      <div class="col">
       <div class="cps"><img src="img/icps-logo.jpg"></div>
-       <div>
-        <div class="icon row">
-          <div class="img-hover col-sm-12 col-md-12 col-lg-12 col-xl-4">
-            <button>
-              <img class="img-responsive img-rounded" src="img/register.gif">
-              <div class="admin">Register Your Interest</div>
-            </button>
-          </div>
-          <div class="img-hover col-xl-4">
-            <button>
-              <img class="img-responsive img-rounded" src="img/cmi-wide-accredited.png">
-              <p>Approved centre</p>
-            </button>
-          </div>
-          <div class="img-hover col-xl-4">
-            <button>
-              <p>Accredited By:</p>
-              <img class="img-responsive img-rounded" src="img/asic-wide-accredited.png">
-            </button>
-          </div>
-        </div>
-       </div>
+
      </div>
+    </div>
+  </div>
+</div>
+<div id="point" class="container">
+  <div class="icon row">
+    <div class="img-hover col-sm-12 col-md-12 col-lg-12 col-xl-4">
+      <button>
+        <img class="img-responsive img-rounded" src="img/register.gif">
+        <div class="admin">Register Your Interest</div>
+      </button>
+    </div>
+    <div class="img-hover col-xl-4">
+      <button>
+        <img class="img-responsive img-rounded" src="img/cmi-wide-accredited.png">
+        <p>Approved centre</p>
+      </button>
+    </div>
+    <div class="img-hover col-xl-4">
+      <button>
+        <p>Accredited By:</p>
+        <img class="img-responsive img-rounded" src="img/asic-wide-accredited.png">
+      </button>
     </div>
   </div>
 </div>
