--- a/index.html
+++ b/index.html
@@ -75,7 +75,14 @@
   </div>
   <div class="bg row">
      <div class="col">
-      <div class="cps"><img src="img/icps-logo.jpg"></div>
+       <div class="row">
+         <div class="col-sm-12 col-md-4 col-lg-4 col-xl-6 cps"><img src="img/icps-logo.jpg"></div>
+         <div class="col-md-8 col-lg-8 col-xl-6 txt" style="text-align: center;">
+           <br><br>
+           <p class="txt1" style="font-size:40px; color:white;">Professional Certificate in Parliamentary Committees</p>
+           <p class="txt2" style="font-size:28px; color:white;">20th - 24th January 2020, London, UK</p>
+         </div>
+       </div>
 
      </div>
     </div>
