--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
      <div class="col">
        <div class="row">
          <div class="col-sm-12 col-md-4 col-lg-4 col-xl-6 cps"><img src="img/icps-logo.jpg"></div>
-         <div class="col-md-8 col-lg-8 col-xl-6 txt" style="text-align: center;">
+         <div class="col-md-8 col-lg-8 col-xl-6 txt" style="text-align: center; z-index: 1;">
            <br><br>
            <p class="txt1" style="font-size:40px; color:white;">Professional Certificate in Parliamentary Committees</p>
            <p class="txt2" style="font-size:28px; color:white;">20th - 24th January 2020, London, UK</p>
@@ -206,7 +206,7 @@
     <div class="container leri">
       <div class="row">
 
-        <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="col-xs-16 col-sm-8 col-md-4">
           <div class="widget subscribe no-box">
             <h5 class="widget-title">Company Information<span></span></h5>
             <p>© 2020 International Centre for Parliamentary Studies Ltd </p>
@@ -215,7 +215,7 @@
           </div>
         </div>
 
-        <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="col-xs-16 col-sm-8 col-md-4">
           <div class="widget no-box">
             <h5 class="widget-title">Contact Information<span></span></h5>
             <ul class="thumbnail-widget">
@@ -232,15 +232,8 @@
           </div>
         </div>
 
-        <div class="col-xs-12 col-sm-6 col-md-3">
-          <div class="widget no-box">
-            <h5 class="widget-title">Get Started<span></span></h5>
-            <p>Get access to your full Training and Marketing Suite.</p>
-            <a class="btn" href="#." target="_blank">Register Now</a>
-          </div>
-        </div>
 
-        <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="col-xs-16 col-sm-8 col-md-4">
 
           <div class="widget no-box">
             <h5 class="widget-title">Sign Up For Our Newsletter<span></span></h5>
